--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.4.0/socket.io.js"></script>
-	<script src='miJs.js'></script>
+	<script src='./sockets.js'></script>
 </body>
 </html>
